[package]
edition = "2021"

name = "vsmtp-config"
version = "1.3.4"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-config/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["data-structures"]

[package.metadata.release]
pre-release-replacements = [
  { file = "Cargo.toml", search = "vsmtp-common = \\{ path = \"../vsmtp-common\", version = .*", replace = "vsmtp-common = { path = \"../vsmtp-common\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-auth = \\{ path = \"../vsmtp-auth\", version = .*", replace = "vsmtp-auth = { path = \"../vsmtp-auth\", version = \"{{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.3.4" }
vsmtp-auth = { path = "../vsmtp-auth", version = "1.3.4" }

anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
  "env-filter",
] }
tracing = { version = "0.1.37", default-features = false, features = [
  "std",
  "attributes",
] }
log = { version = "0.4.17", default-features = false, features = ["std"] }

users = { version = "0.11.0", default-features = false }
base64 = { version = "0.13.1", default-features = false, features = ["std"] }
serde = { version = "1.0.147", default-features = false, features = [
  "std",
  "derive",
] }
humantime-serde = { version = "1.1.1", default-features = false }
strum = { version = "0.24.1", default-features = false, features = [
  "std",
  "derive",
] }
ring-compat = { version = "0.4.1", default-features = false, features = [
  "aead",
  "alloc",
  "digest",
  "signature",
] }

rustls = { version = "0.20.7", default-features = false, features = [
  "tls12",
  "logging",
] }
rustls-pemfile = { version = "1.0.1", default-features = false }

pem = { version = "1.1.0", default-features = false }
rsa = { version = "0.6.1", default-features = false, features = [
  "std",
  "pem",
  # "serde" # TODO
] }

hostname = { version = "0.3.1", default-features = false }
trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
  "system-config",
  "serde-config",
  "tokio-runtime",
] }

semver = { version = "1.0.14", default-features = false, features = [
  "std",
  "serde",
] }
serde_with = { version = "2.0.1", default-features = false, features = [
  "std",
  "macros",
] }
serde_json = "1.0.86"
serde_path_to_error = "0.1.8"

rhai = { version = "1.10.1", git = "https://github.com/schungx/rhai", features = [
  "sync",
  "serde",
] }

[dev-dependencies]
vsmtp-test = { path = "../vsmtp-test" }
pretty_assertions = "1.3.0"
