[package]
edition = "2021"

name = "vsmtp-config"
version = "2.0.1-rc.3"
license = "GPL-3.0-only"

rust-version = "1.66.1"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-config/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["data-structures"]

[package.metadata.release]
pre-release-replacements = [
  { file = "Cargo.toml", prerelease = true, search = "auth\\]\nversion = .*", replace = "auth]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "common\\]\nversion = .*", replace = "common]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "plugin-vsl\\]\nversion = .*", replace = "plugin-vsl]\nversion = \"={{version}}\"" },
]

[dependencies.vsmtp-common]
version = "=2.0.1-rc.3"
path = "../vsmtp-common"

[dependencies.vsmtp-auth]
version = "=2.0.1-rc.3"
path = "../vsmtp-auth"

[dependencies.vsmtp-plugin-vsl]
version = "=2.0.1-rc.3"
path = "../vsmtp-plugin-vsl"
default-features = false
features = ["unix"]

[dependencies]

anyhow = { version = "1.0.68", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter"] }
tracing = { version = "0.1.37", default-features = false, features = ["std", "attributes", "release_max_level_info"] }

users = { version = "0.11.0", default-features = false }
base64 = { version = "0.21.0", default-features = false, features = ["std"] }
serde = { version = "1.0.152", default-features = false, features = ["std", "derive"] }
humantime-serde = { version = "1.1.1", default-features = false }
strum = { version = "0.24.1", default-features = false, features = ["std", "derive"] }
ring-compat = { version = "0.6.0", default-features = false, features = ["std", "alloc", "digest", "signature"] }

rustls = { version = "0.20.8", default-features = false, features = ["tls12", "logging"] }
rustls-pemfile = { version = "1.0.2", default-features = false }

pem = { version = "1.1.1", default-features = false, features = [
  # "serde" # TODO
] }
rsa = { version = "0.8.1", default-features = false, features = [
  "std",
  "pem",
  # "serde" # TODO
] }

hostname = { version = "0.3.1", default-features = false }
trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
  "system-config",
  "serde-config",
  "tokio-runtime",
] }

semver = { version = "1.0.16", default-features = false, features = ["std", "serde"] }
serde_with = { version = "2.2.0", default-features = false, features = ["std", "macros"] }
serde_json = "1.0.91"
serde_path_to_error = "0.1.9"

rhai = { version = "1.12.0", features = ["sync", "serde"] }

[dev-dependencies]
vsmtp-test = { path = "../vsmtp-test" }
pretty_assertions = "1.3.0"
