[package]
edition = "2021"

name = "vsmtp"
version = "1.4.0-rc.9"
license = "GPL-3.0-only"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp/"

readme = "../../../README.md"
keywords = ["vsmtp", "mta", "smtp", "server", "mail"]
categories = ["email"]

rust-version = "1.63.0"

build = "build.rs"

[build-dependencies]
vsmtp-rule-engine = { path = "../vsmtp-rule-engine", version = "1.4.0-rc.7" }
vsmtp-config = { path = "../vsmtp-config", version = "1.4.0-rc.7" }
vsmtp-plugin-vsl = { path = "../plugins/vsmtp-plugin-vsl", version = "1.4.0-rc.7" }
rhai = { version = "1.11.0", features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
    "metadata",
] }
serde_json = "1.0.89"
serde = "1.0.152"

[package.metadata.release]
tag = true
pre-release-commit-message = "chore: Release {{crate_name}} version {{version}}"
pre-release-replacements = [
    { file = "../../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}", prerelease = true },
    { file = "../../../CHANGELOG.md", search = "ReleaseDate", replace = "{{date}}", prerelease = true },
    { file = "../../../CHANGELOG.md", search = "<!-- next-header -->", replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly = 1, prerelease = true },
    { file = "Cargo.toml", prerelease = true, search = "server\\]\nversion = .*", replace = "server]\nversion = \"={{version}}\"" },
    { file = "Cargo.toml", prerelease = true, search = "common\\]\nversion = .*", replace = "common]\nversion = \"={{version}}\"" },
    { file = "Cargo.toml", prerelease = true, search = "config\\]\nversion = .*", replace = "config]\nversion = \"={{version}}\"" },
    { file = "Cargo.toml", prerelease = true, search = "rule-engine\\]\nversion = .*", replace = "rule-engine]\nversion = \"={{version}}\"" },
]

[features]
#! # Features flags
#! Customize the build with the following [features flags](https://doc.rust-lang.org/cargo/reference/features.html):
default = []

#! ## Debugging

## Enable the [`console-subscriber`](https://docs.rs/console-subscriber) layer to collect and aggregate the runtime's
## [`tracing`](https://docs.rs/tracing) data, and use a gRPC server to exports telemetry to clients.
##
## * build the project using `RUSTFLAGS="--cfg tokio_unstable" cargo build --features tokio_console`.
## * add `tokio=trace,runtime=trace` to the log level.
## * run [`tokio-console`](https://docs.rs/tokio-console).
tokio_console = ["dep:console-subscriber"]

#! ## Documentation

## Enable [document-features](https://docs.rs/document-features) to generate
## the documentation of the dependencies and features flags.
document-features = ["dep:document-features"]

[dependencies.vsmtp-common]
version = "=1.4.0-rc.10"
path = "../vsmtp-common"

[dependencies.vsmtp-server]
version = "=1.4.0-rc.10"
path = "../vsmtp-server"

[dependencies.vsmtp-config]
version = "=1.4.0-rc.10"
path = "../vsmtp-config"

[dependencies.vsmtp-rule-engine]
version = "=1.4.0-rc.10"
path = "../vsmtp-rule-engine"

[dependencies]
clap = { version = "4.0.32", default-features = false, features = [
    "std",
    "derive",
    "cargo",
    "usage",
    "help",
    "color",
] }
diff = { version = "0.1.13", default-features = false }
serde_json = { version = "1.0.91", default-features = false, features = [
    "std",
] }

anyhow = { version = "1.0.68", default-features = false, features = ["std"] }
either = { version = "1.8.0", default-features = false, features = ["use_std"] }
humantime = { version = "2.1.0", default-features = false }

tracing = { version = "0.1.37", default-features = false, features = [
    "std",
    "attributes",
    "release_max_level_info",
] }
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "std",
] }
tracing-appender = { version = "0.2.2", default-features = false }
tracing-journald = { version = "0.3.0", default-features = false }
syslog = { version = "6.0.1", default-features = false }

document-features = { version = "0.2.7", optional = true }
console-subscriber = { version = "0.1.7", optional = true, default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

#
# DEBIAN PACKAGING
#
# Note that as the postinst script uses the adduser there's a
# dependency on the adduser package to keep the lintian tool happy.
#
[package.metadata.deb]
name = "vsmtp"
maintainer = "Pag <pag@viridit.com>"
copyright = "Copyright (c) 2022, viridIT SAS. All rights reserved."
extended-description = "A high performance MTA written in RUST."
changelog = "../../../tools/install/deb/changelog"
depends = "$auto, adduser"
section = "mail"
priority = "optional"
assets = [
    [
        "target/release/vsmtp",
        "usr/sbin/",
        "755",
    ],
    [
        "target/release/vqueue",
        "usr/sbin/",
        "755",
    ],
    [
        "../../../tools/install/man/*",
        "usr/share/man/man1",
        "644",
    ],
    [
        "../../../README.md",
        "usr/share/doc/vsmtp/README",
        "644",
    ],
]
maintainer-scripts = "tools/install/deb/"
systemd-units = { unit-name = "vsmtp", enable = true, start = false }

#
# RPM PACKAGING
#
#
