[package]
edition = "2021"

name = "vsmtp-delivery"
version = "1.3.4"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-delivery/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["network-programming"]

[package.metadata.release]
pre-release-replacements = [
  { file = "Cargo.toml", search = "vsmtp-common = \\{ path = \"../vsmtp-common\", version = .*", replace = "vsmtp-common = { path = \"../vsmtp-common\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-config = \\{ path = \"../vsmtp-config\", version = .*", replace = "vsmtp-config = { path = \"../vsmtp-config\", version = \"{{version}}\" }", prerelease = true },
  { file = "Cargo.toml", search = "vsmtp-mail-parser = \\{ path = \"../vsmtp-mail-parser\", version = .*", replace = "vsmtp-mail-parser = { path = \"../vsmtp-mail-parser\", version = \"{{version}}\" }", prerelease = true },
]

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.3.4" }
vsmtp-config = { path = "../vsmtp-config", version = "1.3.4" }
vsmtp-mail-parser = { path = "../vsmtp-mail-parser", version = "1.3.4" }

async-trait = { version = "0.1.58", default-features = false }
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }

tracing = { version = "0.1.37", default-features = false, features = [
  "std",
  "attributes",
  "release_max_level_info",
] }

futures-util = { version = "0.3.24", default-features = false, features = [
  "async-await",
] }

time = { version = "0.3.17", default-features = false, features = [
  "std",
  "formatting",
  "macros",
] }
addr = { version = "0.15.6", default-features = false, features = [
  "std",
  # "serde", # TODO
] }

users = { version = "0.11.0", default-features = false }
trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
  "dns-over-rustls",
  "dnssec-ring",
  "tokio-runtime",
] }
lettre = { version = "0.10.0", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
  "pool",
] }

tokio = { version = "1.22.0", default-features = false, features = [
  "macros",
  "sync",
  "fs",
  "libc",
  "mio",
  "rt-multi-thread",
] }

[dev-dependencies]
vsmtp-test = { path = "../vsmtp-test" }
test-log = { version = "0.2.11", features = ["trace"] }

rstest = "0.15.0"
async-std = { version = "1.5", features = ["attributes"] }

env_logger = "0.10.0"
tracing-subscriber = { version = "0.3.16", default-features = false, features = [
  "env-filter",
  "fmt",
] }
# tracing-test = "0.2.3"
