[package]
edition = "2021"

name = "vsmtp-delivery"
version = "2.1.1"
license = "GPL-3.0-only"

rust-version = "1.66.1"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-delivery/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["network-programming"]

[package.metadata.release]
pre-release-replacements = [
  { file = "Cargo.toml", prerelease = true, search = "common\\]\nversion = .*", replace = "common]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "config\\]\nversion = .*", replace = "config]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "mail-parser\\]\nversion = .*", replace = "mail-parser]\nversion = \"={{version}}\"" },
  { file = "Cargo.toml", prerelease = true, search = "protocol\\]\nversion = .*", replace = "protocol]\nversion = \"={{version}}\"" },

]

[dependencies.vsmtp-common]
version = "=2.1.1"
path = "../vsmtp-common"

[dependencies.vsmtp-config]
version = "=2.1.1"
path = "../vsmtp-config"

[dependencies.vsmtp-mail-parser]
version = "=2.1.1"
path = "../vsmtp-mail-parser"

[dependencies.vsmtp-protocol]
version = "=2.1.1"
path = "../vsmtp-protocol"

[dependencies]
async-trait = { version = "0.1.64", default-features = false }
anyhow = { version = "1.0.69", default-features = false, features = ["std"] }
erased-serde = { version = "0.3.24", default-features = false, features = ["std"] }
serde = { version = "1.0.144", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.91", default-features = false, features = ["std"] }

tracing = { version = "0.1.37", default-features = false, features = ["std", "attributes", "release_max_level_info"] }

futures-util = { version = "0.3.24", default-features = false, features = ["async-await"] }

time = { version = "0.3.19", default-features = false, features = ["std", "formatting", "macros"] }
addr = { version = "0.15.6", default-features = false, features = ["std"] }
url = { version = "2.3.1", default-features = false }

thiserror = { version = "1.0.38", default-features = false }
strum = { version = "0.24.1", features = ["derive"] }
serde_with = { version = "2.2.0", default-features = false, features = ["std", "macros"] }


users = { version = "0.11.0", default-features = false }
trust-dns-resolver = { version = "0.22.0", default-features = false, features = [
  "dns-over-rustls",
  "dnssec-ring",
  "tokio-runtime",
] }
lettre = { version = "0.10.2", default-features = false, features = [
  "smtp-transport",
  "builder",
  "tokio1-rustls-tls",
  "tracing",
] }
rustls = { version = "0.20.8", default-features = false, features = ["tls12", "logging"] }
pem = { version = "1.1.1", default-features = false }

tokio = { version = "1.25.0", default-features = false, features = [
  "macros",
  "sync",
  "fs",
  "libc",
  "mio",
  "rt-multi-thread",
] }

uuid = { version = "1.3.0", default-features = false, features = ["std", "v4", "fast-rng"] }

[dev-dependencies]
vsmtp-test = { path = "../vsmtp-test" }
test-log = { version = "0.2.11", features = ["trace"] }

rstest = "0.16.0"

env_logger = "0.10.0"
tracing-subscriber = { version = "0.3.16", default-features = false, features = ["env-filter", "fmt"] }
# tracing-test = "0.2.3"
