[package]
edition = "2021"

name = "vsmtp-docs"
version = "1.3.0-rc.1"
license = "GPL-3.0-only"

rust-version = "1.60"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"
homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"

publish = false

[dependencies]
vsmtp-rule-engine = { path = "../vsmtp-rule-engine" }
vsmtp-config = { path = "../vsmtp-config" }

rhai = { version = "1.9.1", features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
    "metadata",
] }
