[package]
edition = "2021"

name = "vsmtp-mail-parser"
version = "1.2.1"
license = "GPL-3.0-only"

rust-version = "1.60"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-mail-parser/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["email", "parsing"]

[dependencies]
tracing = "0.1.36"
either = "1.8.0"
async-trait = "0.1.57"
serde = { version = "1.0.144", features = ["derive"] }

tokio-stream = "0.1.9"

# NOTE: should avoid here
anyhow = "1.0.62"

# could be removed ?
convert_case = "0.5.0"
serde_json = "1.0.85"

tokio = { version = "1.0.0", default-features = false, features = ["fs"] }

[dev-dependencies]
pretty_assertions = "1.2.1"
