[package]
edition = "2021"

name = "vsmtp-mail-parser"
version = "1.3.0"
license = "GPL-3.0-only"

rust-version = "1.62.1"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-mail-parser/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["email", "parsing"]

[dependencies]
tracing = { version = "0.1.36", default-features = false, features = ["std"] }
either = { version = "1.8.0", default-features = false, features = ["use_std"] }
async-trait = { version = "0.1.57", default-features = false }
serde = { version = "1.0.144", default-features = false, features = [
    "std",
    "derive",
] }

tokio-stream = { version = "0.1.10", default-features = false }
anyhow = { version = "1.0.65", default-features = false, features = ["std"] }

# TODO : remove me
convert_case = "0.6.0"
tokio = { version = "1.21.1", default-features = false, features = ["fs"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
