[package]
edition = "2021"

name = "vsmtp-mail-parser"
version = "1.4.0-rc.5"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-mail-parser/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["email", "parsing"]

[dependencies]
tracing = { version = "0.1.37", default-features = false, features = [
    "std",
    "attributes",
    "release_max_level_info",
] }
either = { version = "1.8.0", default-features = false, features = ["use_std"] }
async-trait = { version = "0.1.59", default-features = false }
serde = { version = "1.0.149", default-features = false, features = [
    "std",
    "derive",
] }
thiserror = { version = "1.0.37", default-features = false }

tokio-stream = { version = "0.1.11", default-features = false, features = [
    "time",
] }
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }

# TODO : remove me
convert_case = "0.6.0"
tokio = { version = "1.22.0", default-features = false, features = ["fs"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
