[package]
edition = "2021"

name = "vsmtp-plugins"
version = "1.3.4"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-mail-parser/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["plugin", "plugins"]

[dependencies]
libloading = "0.7.3"
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }

serde = { version = "1.0.144", default-features = false, features = [
    "std",
    "derive",
] }

rhai = { version = "1.10.1", git = "https://github.com/schungx/rhai", features = [
    "unchecked",
    "sync",
    "internals",
    "no_closure",
    "metadata",
] }

[features]
default = []
testing = [] # Exposes helpers to test plugins.
