[package]
edition = "2021"

name = "vsmtp-protocol"
version = "1.3.4"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-protoco/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["email", "smtp"]

publish = false

[dependencies.vsmtp-auth]
version = "1.3.4"
path = "../vsmtp-auth"

[dependencies]
vsmtp-common = { path = "../vsmtp-common", version = "1.3.4" }

tokio = { version = "1.21.2", default-features = false, features = [
    "macros",
    "sync",
    "fs",
    "libc",
    "mio",
    "rt-multi-thread",
    "net",
    "io-util",
] }
async-trait = { version = "0.1.58", default-features = false }
tokio-stream = { version = "0.1.11", default-features = false }
async-stream = { version = "0.3.3", default-features = false }

tokio-rustls = { version = "0.23.4", default-features = false, features = [
    "logging",
    "tls12",
] }
rsasl = { git = "https://github.com/Mathieu-Lala/rsasl", branch = "fix/callback-static", version = "=2.0.0-rc.3", default-features = false, features = [
    "provider",
    "config_builder",
    # "scram-sha-1",
    # "scram-sha-2",
    "anonymous",
    # "external",
    # "xoauth2",
    "plain",
    "login",
] }
tracing = { version = "0.1.37", default-features = false, features = [
    "std",
    "attributes",
    "release_max_level_info",
] }

bytes = { version = "1.2.1", default-features = false }
base64 = { version = "0.13.1", default-features = false, features = ["std"] }

thiserror = { version = "1.0.37", default-features = false }
anyhow = { version = "1.0.66", default-features = false, features = ["std"] }
strum = { version = "0.24.1", features = ["derive"] }

time = { version = "0.3.15", default-features = false, features = [
    "std",
    "formatting",
    "macros",
    "serde-well-known",
] }

serde = { version = "1.0.147", default-features = false, features = [
    "std",
    "derive",
] }
addr = { version = "0.15.6", default-features = false, features = [
    "std",
    # "serde", # TODO
] }

fastrand = { version = "1.8.0", default-features = false }
