[package]
edition = "2021"

name = "vsmtp-protocol"
version = "1.4.0-rc.12"
license = "GPL-3.0-only"

rust-version = "1.63.0"

authors = ["Team viridIT <https://viridit.com/>"]
description = "Next-gen MTA. Secured, Faster and Greener"

homepage = "https://github.com/viridIT/vSMTP"
repository = "https://github.com/viridIT/vSMTP"
documentation = "https://docs.rs/crate/vsmtp-protoco/"

readme = "../../../README.md"
keywords = ["vsmtp"]
categories = ["email", "smtp"]

[package.metadata.release]
pre-release-replacements = [
    { file = "Cargo.toml", prerelease = true, search = "auth\\]\nversion = .*", replace = "auth]\nversion = \"={{version}}\"" },
    { file = "Cargo.toml", prerelease = true, search = "common\\]\nversion = .*", replace = "common]\nversion = \"={{version}}\"" },
]

[dependencies.vsmtp-auth]
version = "=1.4.0-rc.13"
path = "../vsmtp-auth"

[dependencies.vsmtp-common]
version = "=1.4.0-rc.12"
path = "../vsmtp-common"

[dependencies]

tokio = { version = "1.23.0", default-features = false, features = [
    "macros",
    "sync",
    "fs",
    "libc",
    "mio",
    "rt-multi-thread",
    "net",
    "io-util",
] }
async-trait = { version = "0.1.60", default-features = false }
tokio-stream = { version = "0.1.11", default-features = false, features = [
    "time",
] }
async-stream = { version = "0.3.3", default-features = false }

tokio-rustls = { version = "0.23.4", default-features = false, features = [
    "logging",
    "tls12",
] }
rsasl = { version = "=2.0.0-rc.4", default-features = false, features = [
    "provider",
    "config_builder",
    # "scram-sha-1",
    # "scram-sha-2",
    "anonymous",
    # "external",
    # "xoauth2",
    "plain",
    "login",
] }
tracing = { version = "0.1.37", default-features = false, features = [
    "std",
    "attributes",
    "release_max_level_info",
] }

bytes = { version = "1.3.0", default-features = false }
base64 = { version = "0.20.0", default-features = false, features = ["std"] }

thiserror = { version = "1.0.38", default-features = false }
anyhow = { version = "1.0.68", default-features = false, features = ["std"] }
strum = { version = "0.24.1", features = ["derive"] }

time = { version = "0.3.15", default-features = false, features = [
    "std",
    "formatting",
    "macros",
    "serde-well-known",
] }

serde = { version = "1.0.152", default-features = false, features = [
    "std",
    "derive",
] }
addr = { version = "0.15.6", default-features = false, features = ["std"] }

fastrand = { version = "1.8.0", default-features = false }

uuid = { version = "1.2.2", default-features = false, features = [
    "std",
    "v4",
    "fast-rng",
] }
